Paint link icon in white in high contrast mode; fixes 1515516

--- a/packages/typescriptlang-org/src/templates/pages/css/documentation.scss
+++ b/packages/typescriptlang-org/src/templates/pages/css/documentation.scss
@@ -28,6 +28,7 @@
     &:hover {
       background-color: $ts-light-bg-grey;
     }
+
     &:active {
       background-color: $ts-light-bg-grey-highlight-color;
       margin-bottom: 19px;
@@ -36,6 +37,10 @@
 
   @media screen and (-ms-high-contrast: active) {
     border: 1px solid grey;
+
+    svg path {
+      fill: white;
+    }
   }
 
   &.headline {
@@ -99,6 +104,7 @@
 
   &.wide {
     justify-content: space-between;
+
     .item {
       min-width: 240px;
     }
